# MLtiplier

./: .dockerignore  .gitignore  Dockerfile.app_server  Dockerfile.ml_worker  LICENSE  README.md  docker-compose.yml
app_server/: pyproject.toml  requirements.txt  setup.py
app_server/app_server/: main.py  redis_job_producer.py  utils.py
app_server/tests/: test_app_server.py
backend_services/app_server/: requirements.txt  setup.py
backend_services/app_server/app_server/: main.py
backend_services/app_server/tests/: test_app_server.py
backend_services/config_manager/: setup.py
backend_services/config_manager/config_manager/: job.py  schema.py
backend_services/ml_worker/: requirements.txt  setup.py
backend_services/ml_worker/ml_worker/: main.py
backend_services/ml_worker/tests/: test_ml_worker.py
backend_services/web_server/: nginx.conf  start_server.sh
config_manager/: pyproject.toml  requirements.txt  setup.py
config_manager/config_manager/: commons.py  exception.py  job.py  redis.py  schema.py  utils.py
config_manager/tests/: test_config_manager.py
ml_worker/: pyproject.toml  requirements.txt  setup.py
ml_worker/ml_worker/: model.py  resizer.py  worker.py
ml_worker/tests/: test_ml_worker.py
queue_manager/: pyproject.toml  requirements.txt
queue_manager/queue_manager/: app_server.py  ml_worker.py  redis_job_producer.py  redis_job_queue.py
queue_manager/tests/: test_queue_manager.py
services/backend-server/: Dockerfile  pyproject.toml
services/backend-server/backend_server/: main.py  model.py  utils.py  worker.py
services/backend-server/tests/: test_backend_server.py
services/ui/: package.json  postcss.config.js  rollup.config.js
services/ui/src/components/: TailwindGlobalStyle.svelte
services/ui/src/routes/: _layout.svelte  index.svelte  result.svelte
services/web-server/: nginx.conf
ui/: package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.js
ui/src/: template.html
ui/src/components/: Nav.svelte
ui/src/routes/: index.svelte
ui/static/: global.css
