[tool.poetry]
name = "app_server"
version = "0.1.0"
description = ""
authors = ["Kshitij Karthick <kshitij.karthick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^3.5.3"
fastapi = "^0.61.1"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
rq = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
