[tool.poetry]
name = "config_manager"
version = "0.1.0"
description = ""
authors = ["Kshitij Karthick <kshitij.karthick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
