[tool.poetry]
name = "ml_worker"
version = "0.1.0"
description = ""
authors = ["Kshitij Karthick <kshitij.karthick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
redis = "^3.5.3"
fastai = "^2.0.16"
rq = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
