[tool.poetry]
name = "backend-server"
version = "0.1.0"
description = ""
authors = ["Kshitij Karthick <kshitij.karthick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
rq = "^1.9.0"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
